# cpp-cuda-deeplearning

./: .gitignore  README.md  push.sh
cpp/: CMakeLists.txt  Makefile  README.md  cmake.sh  make.sh
cpp/include/: matrice.h
cpp/lib/: library.h  run.sh
cpp/lib/include/: library.h
cpp/lib/src/: library.cpp
cpp/libs/: run.sh
cpp/libs/src/: library.cpp
cpp/src/: main.cpp  matrice.cpp
cuda/: numba.ipynb
cuda/01_vector_addition/: 01_vector_add.cpp  02_vector_add_unified_memory.cpp  03_vector_add_unified_memory_prefetch.cpp  Makefile  addition.h  run.sh
cuda/02_matrix_multiplication/: 01_matrix_mul.cpp  02_matrix_mul_shared_mem.cpp  03_matrix_mul_rows.cpp  04_matrix_mul_cols.cpp  Makefile  multiplication.h  run.sh
cuda/03_cublas/: 01_array_add.cpp  02_matrix_mul.cpp  Makefile
cuda/cuBLAS/: CMakeLists.txt  cmake.sh
cuda/cuBLAS/include/: common.h
cuda/cuBLAS/src/: 01-axpy.cu  01-dot.cu  02-gemv.cu  03-gemm.cu  common.cu
pytorch/: README.md
pytorch/01_hello_world/: CMakeLists.txt  main.cpp  run.sh
pytorch/02_pretrained_model/: CMakeLists.txt  inference.cpp  inference.py  run.sh  train.py
pytorch/03_train_model/: CMakeLists.txt  inference.cpp  inference.py  run.sh  train.cpp
pytorch/04_custom_data/: CMakeLists.txt  cv2.cpp  inference.cpp  train.cpp
pytorch/04_custom_data/include/: common.h  data.h  network.h
pytorch/04_custom_data/src/: common.cpp  data.cpp  inference.cpp  network.cpp  train.cpp
pytorch/04_custom_data/utils/: common.h  csv_dataset.h  folder_dataset.h  network.h
pytorch/05_resnet/: CMakeLists.txt  run.sh  train.cpp  train.py
pytorch/05_resnet/include/: cifar10.h  resnet.h  transform.h
pytorch/05_resnet/src/: cifar10.cpp  inference.cpp  resnet.cpp  transform.cpp
pytorch/data/pets/: clean.ipynb  test.csv  train.csv
